--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flux": "^3.1.3",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
+    "pm2": "^4.4.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-canvas-js": "^1.0.1",
@@ -25,6 +26,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "serve": "^11.3.2",
     "shards-react": "^1.0.3",
     "socket.io-client": "^2.3.0"
   },
