--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@zalando/oauth2-client-js": "0.0.18",
     "axios": "^0.19.2",
+    "base-64": "^0.1.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
