--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "classnames": "^2.2.6",
     "client-oauth2": "^4.3.0",
     "d2": "^31.8.1",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "flux": "^3.1.3",
+    "formik": "^2.1.5",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
     "pm2": "^4.4.0",
