--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,7 @@
-version: '3'
-
+version: "3.0"
 services:
-  db:
-    image: postgres:9.6
-    environment:
-      PGDATA: /var/lib/postgresql/data/pgdata
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-# Un-comment to access the db service directly
-#    ports:
-#      - 5432:5432
-    networks:
-      - db
-    restart: unless-stopped
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
-  fusionauth:
-    image: fusionauth/fusionauth-app:latest
-    depends_on:
-      - db
-    environment:
-      DATABASE_URL: jdbc:postgresql://db:5432/fusionauth
-      DATABASE_ROOT_USER: ${POSTGRES_USER}
-      DATABASE_ROOT_PASSWORD: ${POSTGRES_PASSWORD}
-      DATABASE_USER: ${DATABASE_USER}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      FUSIONAUTH_MEMORY: ${FUSIONAUTH_MEMORY}
-      FUSIONAUTH_SEARCH_ENGINE_TYPE: database
-      FUSIONAUTH_URL: http://fusionauth:9011
-      FUSIONAUTH_RUNTIME_MODE: development
-    networks:
-     - db
-    restart: unless-stopped
-    ports:
-      - 9011:9011
-    volumes:
-      - fa_config:/usr/local/fusionauth/config
-
-networks:
-  db:
-    driver: bridge
-
-volumes:
-  db_data:
-  fa_config:
+  client:
+    stdin_open: true # run docker in interactice mode
+    image: testapp:latest
+    ports: 
+      - "3000:3000"
